Closed Bug 1796917 Opened 3 years ago Closed 2 years ago

Parenthesis error in nspr/pr/src/pthreads/ptsynch.c

Categories

(NSPR :: NSPR, defect)

4.35
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: svante.signell, Assigned: svante.signell)

References

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0

Steps to reproduce:

Build on GNU/Hurd

Actual results:

ptsynch.c:55:48: error: ‘PTHREAD_MUTEX_ADAPTIVE_NP’ undeclared (first use in this function);

Expected results:

This code should not be activated
rv = pthread_mutexattr_settype(&_pt_mattr, PTHREAD_MUTEX_ADAPTIVE_NP);

This is due to an error in the condition:
#if (defined(LINUX) && (GLIBC > 2) || (GLIBC == 2 && GLIBC_MINOR >= 2))...
The second applies to all systems defining glibc>=2.2. It was probably meant to include the condition on LINUX too. The attached patch fixes this.

The severity field is not set for this bug.
:KaiE, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(kaie)

ping?

Thanks for your patch. Your patch seems reasonable.
I'll commit your patch to NSPR. It might take a while (months) until it's released.

Flags: needinfo?(kaie)

Comment on attachment 9299742 [details] [diff] [review]
nspr_pr_src_pthreads_ptsynch.c.diff

r=kaie

Attachment #9299742 - Flags: review+
Status: UNCONFIRMED → NEW
Ever confirmed: true
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 4.36
Assignee: nobody → svante.signell
Duplicate of this bug: 1833610
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: