Bug 1796917 - Parenthesis error in nspr/pr/src/pthreads/ptsynch.c. r=kaie